# llm-localmodel

./: DESIGN.md  README.md  pyproject.toml
llm_localmodel/: __init__.py
tests/: test_llm_localmodel.py
